online_fm_radio/log.txt
Upgrading build.gradle
8
Upgrading gradle.properties
9
Upgrading gradle.properties
10
Warning: Flutter support for your project's Android Gradle Plugin version (Android Gradle Plugin version 8.7.0) will soon be dropped. Please upgrade your Android Gradle Plugin version to a version of at least Android Gradle Plugin version 8.11.1 soon.
11
Running Gradle task 'assembleRelease'...                        
12
Alternatively, use the flag "--android-skip-build-dependency-validation" to bypass this check.
13

14
Potential fix: Your project's AGP version is typically defined in the plugins block of the `settings.gradle` file (/home/runner/work/FlutterRadio/FlutterRadio/online_fm_radio/android/settings.gradle), by a plugin with the id of com.android.application. 
15
If you don't see a plugins block, your project was likely created with an older template version. In this case it is most likely defined in the top-level build.gradle file (/home/runner/work/FlutterRadio/FlutterRadio/online_fm_radio/android/build.gradle) by the following line in the dependencies block of the buildscript: "classpath 'com.android.tools.build:gradle:<version>'".
16

17
Warning: Flutter support for your project's Kotlin version (2.0.0) will soon be dropped. Please upgrade your Kotlin version to a version of at least 2.2.20 soon.
18
Alternatively, use the flag "--android-skip-build-dependency-validation" to bypass this check.
19

20
Potential fix: Your project's KGP version is typically defined in the plugins block of the `settings.gradle` file (/home/runner/work/FlutterRadio/FlutterRadio/online_fm_radio/android/settings.gradle), by a plugin with the id of org.jetbrains.kotlin.android. 
21
If you don't see a plugins block, your project was likely created with an older template version, in which case it is most likely defined in the top-level build.gradle file (/home/runner/work/FlutterRadio/FlutterRadio/online_fm_radio/android/build.gradle) by the ext.kotlin_version property.
22

23
lib/core/services/favorites_service.dart:34:9: Error: This expression has type 'void' and can't be used.
24
    if (existed) {
25
        ^
26
lib/features/home/home_page.dart:117:11: Error: Final variable 'stations' might already be assigned at this point.
27
          stations = _allStations
28
          ^^^^^^^^
29
Target kernel_snapshot_program failed: Exception
30

31

32
FAILURE: Build failed with an exception.
33

34
* What went wrong:
35
Execution failed for task ':app:compileFlutterBuildRelease'.
36
> Process 'command '/opt/hostedtoolcache/flutter/stable-3.44.7-x64/flutter/bin/flutter'' finished with non-zero exit value 1
37

38
* Try:
39
> Run with --stacktrace option to get the stack trace.
40
> Run with --info or --debug option to get more log output.
41
> Run with --scan to get full insights.
42
> Get more help at https://help.gradle.org.
43

44
BUILD FAILED in 2m 31s
45
Running Gradle task 'assembleRelease'...                          153.5s
46
Gradle task assembleRelease failed with exit code 1
47
Error: Process completed with exit code 1.